--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Abstract Painting</title>
-    <link rel="stlyesheet" type="text/css" link="ss1.css">
+    <link rel="stlyesheet" type="text/css" href="style.css">
   </head>
   
   <body>
