--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   </head>
   
   <body>
-    <div class="oneblock"></div>
-    <div class="twoblock"></div>
-    <div class="threeblock"></div>
-    <div class="fourblock"></div>
-    <div class="fiveblock"></div>
-    <div class="sixblock"></div>
+    <center>
+      <div class="oneblock"><center><h2>Eddie</h2></center></div>
+      <div class="twoblock"><center><h2>Eddie</h2></center></div>
+      <div class="threeblock"><center><h2>Eddie</h2></center></div>
+      <div class="fourblock"><center><h2>Eddie</h2></center></div>
+      <div class="fiveblock"><center><h2>Eddie</h2></center></div>
+      <div class="sixblock"><center><h2>Eddie</h2></center></div>
+    </center>
   </body>
 
 </html>
