--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <center>
       <div class="oneblock"><center><h2>Eddie</h2></center></div>
-      <div class="twoblock"><center><h2>Eddie</h2></center></div>
+      <div class="twoblock"><center><h2 class="largest">Eddie</h2></center></div>
       <div class="threeblock"><center><h2>Eddie</h2></center></div>
       <div class="fourblock"><center><h2>Eddie</h2></center></div>
       <div class="fiveblock"><center><h2>Eddie</h2></center></div>
-      <div class="sixblock"><center><h2>Eddie</h2></center></div>
+      <div class="sixblock"><center><h2 class="large">Eddie</h2></center></div>
     </center>
   </body>
 
