--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="threeblock"><center><h2>Eddie</h2></center></div>
       <div class="fourblock"><center><h2>Eddie</h2></center></div>
       <div class="fiveblock"><center><h2>Eddie</h2></center></div>
-      <div class="sixblock"><center><h2 class="large">Eddie</h2></center></div>
+      <div class="sixblock"><center><h2 class="big">Eddie</h2></center></div>
     </center>
   </body>
 
