--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <center>
       <div class="oneblock"><center><h2>Eddie</h2></center></div>
       <div class="twoblock"><center><h2 class="largest">Eddie</h2></center></div>
-      <div class="threeblock"><center><h2>Eddie</h2></center></div>
+      <div class="threeblock"><center><h2 class="small">Eddie</h2></center></div>
       <div class="fourblock"><center><h2>Eddie</h2></center></div>
       <div class="fiveblock"><center><h2>Eddie</h2></center></div>
       <div class="sixblock"><center><h2 class="big">Eddie</h2></center></div>
